--- a/client/src/components/posts/styles.scss
+++ b/client/src/components/posts/styles.scss
@@ -28,6 +28,9 @@
     }
   }
 
+  .title-input{
+    margin-bottom: 15px;
+  }
 
 
 
@@ -48,5 +51,8 @@
         height: 480px;
         object-fit: cover;
       }
+  }
+  .my-1{
+    font-size: 20px;
   }
 }
