--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,12 @@
   --success-color: #28a745;
 }
 
+html {
+  background-image: url('../src/img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -17,7 +23,6 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
   color: #333;
 }
 
@@ -42,6 +47,12 @@ img {
   padding: 0 2rem;
   margin-top: 6rem;
   margin-bottom: 3rem;
+}
+
+.dashboard_admin{
+  background: rgba(100, 100, 100, 0.3803921568627451);
+  padding: 30px;
+  border-radius: 15px;
 }
 
 /* Text Styles*/
@@ -307,8 +318,23 @@ img {
   text-align: left;
 }
 
+.section-edu-exp{
+  background: white;
+  border-radius: 10px;
+    padding: 15px;
+    width: 52%;
+    margin: 10px 0;
+}
+
+.table {
+  background: #8080807d;
+  border-radius: 15px;
+  padding: 15px;
+}
+
 .table th {
-  background: var(--light-color);
+  background: #17a2b8;
+  color: white;
 }
 
 /* Navbar */
@@ -415,6 +441,19 @@ img {
   text-align: center;
 }
 
+.profile-about .skills i {
+  color: green;
+  margin-right: 10px;
+}
+
+.text-outer{
+  padding: 15px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 0 13px 0px #545454;
+  margin: 15px 0;
+}
+
 .profile-exp {
   grid-area: exp;
 }
@@ -506,11 +545,31 @@ img {
   margin-bottom: 0.5rem;
 }
 
+.section-edu-exp .outer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.section-edu-exp .btn.btn-danger {
+  width: 40px;
+  border-radius: 50%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Mobile Styles */
 @media (max-width: 700px) {
   .container {
     margin-top: 8rem;
   }
+
+  .section-edu-exp {
+    width: 100%;
+  }
+
 
   .hide-sm {
     display: none;
@@ -525,14 +584,24 @@ img {
     font-size: 2rem;
   }
 
+  .navbar_logged{
+    width: 100%!important;
+  }
+
   .lead {
     font-size: 1rem;
+    width: 100%!important;
   }
 
   /* Navbar */
   .navbar {
     display: block;
     text-align: center;
+  }
+
+  .post-item-area {
+    width: 100%!important;
+    margin: 15px 0!important;
   }
 
   .navbar ul {
@@ -562,7 +631,6 @@ img {
 
   .profile-top img,
   .profile img {
-    width: 200px;
     margin: auto;
   }
 
@@ -576,11 +644,13 @@ img {
   }
 
   .profile-about .skills {
+    align-items: baseline;
     flex-direction: column;
   }
 
   .dash-buttons{
     display: flex;
+    flex-direction: column;
   }
 
   
@@ -592,7 +662,9 @@ img {
 
   .post {
     grid-template-columns: 1fr;
+    grid-auto-flow: column;
   }
+
   .post a,
   .post button {
     padding: 0.3rem 0.4rem;
