--- a/client/src/components/profiles/styles.scss
+++ b/client/src/components/profiles/styles.scss
@@ -8,3 +8,11 @@
         padding:5px
     }
 }
+
+
+@media (max-width: 700px) {
+    .filter-section{
+        flex-direction: column;
+        align-items: self-end;
+    }
+}
